--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.14",
+    "lucide-react": "^0.488.0",
     "prettier-plugin-tailwindcss": "^0.0.0-insiders.d539a72",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
