--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.4.1",
     "@reduxjs/toolkit": "^2.6.1",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
@@ -18,8 +19,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1",
+    "mongoose": "^8.13.1",
     "nodemon": "^3.1.9",
     "validator": "^13.12.0"
-  }
+  },
+  "type": "commonjs"
 }
