--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.13.1",
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
+    "react-modal": "^3.16.3",
     "validator": "^13.12.0"
   },
   "type": "commonjs"
