--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "nodemon": "^3.1.9",
+    "stripe": "^18.0.0",
     "validator": "^13.12.0"
   }
 }
