--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "@stripe/stripe-js": "^7.2.0",
     "@tailwindcss/vite": "^4.0.14",
     "lucide-react": "^0.488.0",
     "prettier-plugin-tailwindcss": "^0.0.0-insiders.d539a72",
