--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.6.1",
+    "@stripe/stripe-js": "^7.2.0",
     "@tailwindcss/vite": "^4.0.14",
+    "axios": "^1.9.0",
     "lucide-react": "^0.488.0",
     "prettier-plugin-tailwindcss": "^0.0.0-insiders.d539a72",
     "react": "^19.0.0",
