--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.13.1",
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
+    "stripe": "^18.0.0",
     "validator": "^13.12.0"
   },
   "type": "commonjs"
