--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@stripe/stripe-js": "^7.2.0",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.9.0",
+    "framer-motion": "^12.9.2",
     "lucide-react": "^0.488.0",
     "prettier-plugin-tailwindcss": "^0.0.0-insiders.d539a72",
     "react": "^19.0.0",
