--- a/PaymentService/package.json
+++ b/PaymentService/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "express-fileupload": "^1.5.1",
     "mongoose": "^8.14.0",
+    "nodemailer": "^6.10.1",
     "nodemon": "^3.1.10",
     "stripe": "^18.0.0"
   }
