--- a/K8/delivery-deployment.yaml
+++ b/K8/delivery-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: delivery
           image: thefoodhubmicroservice-delivery-service
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 4002
 ---
