--- a/K8/notification-deployment.yaml
+++ b/K8/notification-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: notification
           image: thefoodhubmicroservice-notification-service
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 4005
 ---
