--- a/K8/payment-deployment.yaml
+++ b/K8/payment-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: payment
           image: thefoodhubmicroservice-payment-service
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 4000
 ---
