--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,9 @@ services:
       - /app/node_modules
     env_file:
       - ./AuthService/.env
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4 
     networks:
       - app-network
 
@@ -35,6 +38,9 @@ services:
       - /app/node_modules
     env_file:
       - ./DeliveryService/.env
+    dns:
+    - 8.8.8.8
+    - 8.8.4.4
     networks:
       - app-network
 
@@ -48,6 +54,9 @@ services:
       - /app/node_modules
     env_file:
       - ./NotificationService/.env
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4   
     networks:
       - app-network
 
@@ -61,6 +70,9 @@ services:
       - /app/node_modules
     env_file:
       - ./OrderService/.env
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4   
     networks:
       - app-network
 
@@ -74,6 +86,9 @@ services:
       - /app/node_modules
     env_file:
       - ./PaymentService/.env
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4   
     networks:
       - app-network
 
@@ -87,6 +102,9 @@ services:
       - /app/node_modules
     env_file:
       - ./RestuarantService/.env
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4 
     networks:
       - app-network
 
