--- a/ingress.yaml
+++ b/ingress.yaml
@@ -56,3 +56,12 @@ spec:
                 name: notification-service
                 port:
                   number: 4005
+
+          # ✅ Add frontend catch-all route with correct path
+          - path: /*
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend-service
+                port:
+                  number: 3000
