commit with nginx

--- a/K8/frontend-deployment.yaml
+++ b/K8/frontend-deployment.yaml
@@ -27,10 +27,9 @@ kind: Service
 metadata:
   name: frontend-service
 spec:
-  type: NodePort
+  type: ClusterIP  # 🔁 Change from NodePort to ClusterIP (default)
   selector:
     app: frontend
   ports:
     - port: 3000
       targetPort: 3000
-      nodePort: 30080
