--- a/ingress.yaml
+++ b/ingress.yaml
@@ -2,57 +2,59 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: foodhub-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
     - host: foodhub.local
       http:
         paths:
-        - path: /payment
-          pathType: Prefix
-          backend:
-            service:
-              name: payment-service
-              port:
-                number: 4000
-        - path: /auth
-          pathType: Prefix
-          backend:
-            service:
-              name: auth-service
-              port:
-                number: 4001
-        - path: /delivery
-          pathType: Prefix
-          backend:
-            service:
-              name: delivery-service
-              port:
-                number: 4002
-        - path: /order
-          pathType: Prefix
-          backend:
-            service:
-              name: order-service
-              port:
-                number: 4003
-        - path: /restaurant
-          pathType: Prefix
-          backend:
-            service:
-              name: restaurant-service
-              port:
-                number: 4004
-        - path: /notification
-          pathType: Prefix
-          backend:
-            service:
-              name: notification-service
-              port:
-                number: 4005
-        - path: /
-          pathType: Prefix
-          backend:
-            service:
-              name: frontend-service
-              port:
-                number: 3000
+          - path: /auth
+            pathType: Prefix
+            backend:
+              service:
+                name: auth-service
+                port:
+                  number: 80
+          - path: /payment
+            pathType: Prefix
+            backend:
+              service:
+                name: payment-service
+                port:
+                  number: 80
+          - path: /delivery
+            pathType: Prefix
+            backend:
+              service:
+                name: delivery-service
+                port:
+                  number: 80
+          - path: /order
+            pathType: Prefix
+            backend:
+              service:
+                name: order-service
+                port:
+                  number: 80
+          - path: /restaurant
+            pathType: Prefix
+            backend:
+              service:
+                name: restaurant-service
+                port:
+                  number: 80
+          - path: /notification
+            pathType: Prefix
+            backend:
+              service:
+                name: notification-service
+                port:
+                  number: 80
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend-service
+                port:
+                  number: 80
