commit kubernates is done

--- a/K8/frontend-deployment.yaml
+++ b/K8/frontend-deployment.yaml
@@ -27,9 +27,12 @@ kind: Service
 metadata:
   name: frontend-service
 spec:
-  type: ClusterIP  # 🔁 Change from NodePort to ClusterIP (default)
+  type: ClusterIP  
   selector:
     app: frontend
   ports:
     - port: 80
       targetPort: 3000
+
+
+
