--- a/K8/auth-deployment.yaml
+++ b/K8/auth-deployment.yaml
@@ -47,9 +47,11 @@ kind: Service
 metadata:
   name: auth-service
 spec:
+  type: NodePort  # Exposing the service as NodePort
   selector:
     app: auth
   ports:
     - protocol: TCP
       port: 80
       targetPort: 4001
+      nodePort: 30100
