--- a/K8/delivery-deployment.yaml
+++ b/K8/delivery-deployment.yaml
@@ -45,9 +45,11 @@ kind: Service
 metadata:
   name: delivery-service
 spec:
+  type: NodePort
   selector:
     app: delivery
   ports:
     - protocol: TCP
       port: 80
       targetPort: 4002
+      nodePort: 30002  
