--- a/K8/payment-deployment.yaml
+++ b/K8/payment-deployment.yaml
@@ -45,9 +45,11 @@ kind: Service
 metadata:
   name: payment-service
 spec:
+  type: NodePort
   selector:
     app: payment
   ports:
     - protocol: TCP
       port: 80
       targetPort: 4000
+      nodePort: 30000  
