--- a/K8/restaurant-deployment.yaml
+++ b/K8/restaurant-deployment.yaml
@@ -45,11 +45,11 @@ kind: Service
 metadata:
   name: restaurant-service
 spec:
-  type: NodePort  # Exposing the service as NodePort
+  type: NodePort
   selector:
     app: restaurant
   ports:
     - protocol: TCP
-      port: 80
+      port: 4004
       targetPort: 4004
-      nodePort: 30090
+      nodePort: 30004  
