--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-spinners": "^0.16.1",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
